[package]
name = "account-model"
version = "0.1.0"
authors = ["pawel.kaminski <pawel.kaminski@casumo.com>"]
edition = "2018"

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
isocountry = {version = "0.2.0" }
iso_currency = {version = "0.2.0" }
#derive_builder = {version = "0.9.0"}
log = "0.4"
